navbar item alignment fixed

--- a/src/component/NavBar.css
+++ b/src/component/NavBar.css
@@ -21,7 +21,7 @@
     font-family:'Nunito-sans-bold';
     list-style: none;
     left:70%;
-    top:-24px;
+    top:-32px;
     position:relative;
     font-size:18px;
 }
